<resources>
    <string name="app_name">MovieLand</string>


    <!--ERROR MESSAGES-->
    <string name="error_Message">Sorry an error happened  while loading.
        Please! check your network connection then tray again later</string>
    <string name="network_error">No Network Connection Available ! Please Check your Connection</string>
    <string name="favorit_error">No Favorite movies</string>
    <string name="json_error">Failed To Parse Jason Data</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="error_Youtube"> This app won\'t run without YouTube App which is missing from your device you can open video in Browser or Download Youtube
    </string>
    <string name="error_activity_state">Sorry An Error happened
        while retrieving activity state try to reload you application</string>
    <string name="no_favorite_message">
        We Recommend Movies according to your Favorites, we can\'t find any favorite movies, so we recommend You the top rated movies
    </string>
    <string name="no_favorite_title">
        No Favorite
    </string>
    <!--ERROR MESSAGES-->



         <!--ViewMain Strings-->
    <string name = "vm_load_key">load</string>
    <string name = "vm_list_key">list</string>
    <string name="vm_list_state_key">state</string>
           <!--End Of ViewMain STrings-->



    <!--ViewDetials Strings-->
    <string name = "vd_currentMovie_key">CurrentMovie</string>
    <!--End Of ViewDetails STrings-->


    <!--MovieDisplayActivity Strings-->
    <string name = "md_open_browser">Open In Browser</string>
    <string name = "md_dialog_title">Youtube Failed</string>
    <!--End Of MovieDisplayActivity STrings-->



    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">OverView</string>
    <string name="movie_api_library_logo">Movie API Library logo</string>
    <string name="movie_image_poster">Movie Image poster</string>
    <string name="trailerID">Trailer %1$s </string>
    <string name="review_error">No Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_view_main">ViewMain</string>
    <string name="movie_Video_Key">MovieKey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--TODO Add Arabic Version of menue Items -->
    <string-array name="view_main_menue_items">
        <item>@string/drawer_item_top_rated</item>
        <item>@string/drawer_item_popular_movies</item>
        <item>@string/drawer_item_Recommended</item>
        <item>@string/drawer_item_About</item>
        <item>@string/drawer_item_Settings</item>
    </string-array>
    <string name="drawer_item_popular_movies">Popular Movies</string>
    <string name="drawer_item_top_rated">Top Rated</string>
    <string name="drawer_item_Recommended">Recommended</string>
    <string name="drawer_item_favorite">My Favorite</string>
    <string name="drawer_item_About">About</string>
    <string name="drawer_item_Settings">Settings</string>

    <string name="title_activity_movie_display">MovieDisplayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="make_favorite_Description">Make Favorite</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="user_image">User Image</string>
    <string name="trailer_icon">Trailer</string>


</resources>
