<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailAppBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detailCollaps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/photo_background_protection">
                <ProgressBar
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/loader"/>
                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    android:transitionName="poster"

                    />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom|start"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:elevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/back"
                        android:tint="#f0f0f0"
                        android:id="@+id/btn_back"
                        android:background="#00000000"

                        />
                    <TextView
                        android:id="@+id/tv_md_Originaltitle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="24sp"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:maxLines="1" />
                    <ImageView
                        android:id="@+id/img_star_movie"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star_big_on"
                        android:contentDescription="@string/make_favorite_Description"
                        />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:weightSum="4"
                android:padding="4dp"
                >
                <TextView
                    android:id="@+id/tv_md_ReleaseDate"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_light_background"
                    android:text="@string/release_date"
                    android:textSize="24sp" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:indeterminate="false"
                        android:layout_height="match_parent"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:id="@+id/rate_progress"
                        android:max="10"
                        android:progressDrawable="@drawable/circle_progress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tv_md_vote_average"
                        android:textColor="#f0f0f0"
                        />
                </LinearLayout>

            </LinearLayout>

            <!--Overview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_md_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:fontFamily="serif" />
            </LinearLayout>


            <!--Trailers-->
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_trailers"
                android:layout_marginStart="10dp">
            </android.support.v7.widget.RecyclerView>

            <!--Reviews-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_reviews"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="top">
                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:id="@+id/tv_review_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_error"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>